# qattrs

./: CMakeLists.txt  README.md  attribute_editor.cpp  attribute_editor.h  bindable.cpp  bindable.h  test.cpp
